output
g++ -I. -g -std=c++11 -Wall -Wextra -Werror -pthread -O *.cpp -lgtest -lgtest_main -o run.tests
In file included from /usr/include/gtest/gtest.h:1807:0,
                 from CellTest.cpp:2:
CellTest.cpp: In member function 'virtual void Cell_Any_live_cell_with_fewer_than_two_live_neighbours_dies_as_if_caused_by_underpopulation_Test::TestBody()':
CellTest.cpp:11:49: error: 'class LiveCell' has no member named 'breedWithLiveNeighbours'
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(0)));
                                                 ^
CellTest.cpp:12:49: error: 'class LiveCell' has no member named 'breedWithLiveNeighbours'
   ASSERT_EQ(typeid(DeadCell), typeid(*liveCell->breedWithLiveNeighbours(1)));
                                                 ^
hiker.cpp:1:21: fatal error: hiker.hpp: No such file or directory
 #include "hiker.hpp"
                     ^
compilation terminated.
make: *** [run.tests] Error 1
